--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,3 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<button mat-raised-button>hello world</button>
-
+<div class="mat-display-4"> this is display 4 </div>
+<div class="mat-display-3"> this is display 3 </div>
+<div class="mat-display-2"> this is display 2</div>
+<div class="mat-display-1">  this is display 1</div>
